# maxrs

./: .env.template  .gitignore  Cargo.toml  README.md
docs/: PROTOCOL.md
examples/: cli.rs  element_probe.rs
max_captcha_solver/: API.md  README.md
src/: auth.rs  captcha.rs  client.rs  error.rs  http.rs  lib.rs  models.rs  protocol.rs
src/auth/: mod.rs
src/auth/captcha/: http.rs  mod.rs  solver.rs
src/auth/operator_channels/: mod.rs  telegram.rs
src/captcha/: http.rs  mod.rs  solver.rs
src/client/: dispatcher.rs  mod.rs  read_loop.rs  transport.rs
src/operator_channels/: cli.rs  mod.rs  telegram.rs
